@@ -139,8 +139,7 @@ public class MetersControlPanel extends PhetTitledPanel {
         setLayout( new BorderLayout() );
         add( innerPanel, BorderLayout.WEST );
         
-        //XXX disabled for KSU dev version
+        //XXX disabled while under development
         voltmeterCheckBox.setEnabled( false );
-        eFieldDetectorCheckBox.setEnabled( false );
     }
 }
