@@ -1,3 +1,4 @@
+10/7/10 enable Electric Field Detector check box for feature development
 # 0.00.31 (44860) Oct 7, 2010
 10/7/10 development version to share with KSU
 10/7/10 fix: custom dielectric constant not reset by Reset All
